Added enableRootLogin option/function. Needs a bit of a cleanup still.

--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -46,6 +46,11 @@ SSHKey=/home/andreas/aws/ssh-keys/ec2-keypair.pem
 ;the instance. For example:
 ;SecurityGroups = ssh,web
 SecurityGroups = ssh
+; Ubuntu official images have the root login disabled via a command
+; in /root/.ssh/authorized_keys. If the setting below is set to true,
+; then that command is removed allowing root to login again directly
+; with the ssh key
+EnableRootLogin = yes
 
 [CHROOT]
 Tempdir=/tmp/upgrade-tester
