Added script to downgrade landscape to the original intrepid version after bootstrap

--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -28,6 +28,7 @@ Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
 AddRepo=landscape.list
 RealReboot=no
+PostBootstrapScript=downgrade-landscape-client.sh
 
 [KVM]
 Virtio=True
