- change EnableRootLogin option to UbuntuOfficialAMI, because it's   not only the root login that is different - assert that root login was enabled when needed - select user for ssh-ping based on UbuntuOfficialAMI value

--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -49,9 +49,9 @@ SSHKey=/home/andreas/aws/ssh-keys/ec2-keypair.pem
 SecurityGroups = ssh
 ; Ubuntu official images have the root login disabled via a command
 ; in /root/.ssh/authorized_keys. If the setting below is set to true,
-; then that command is removed allowing root to login again directly
-; with the ssh key
-EnableRootLogin = yes
+; two things happen: we login as "ubuntu" and use sudo to re-enable
+; the root login, and use the "ubuntu" user to ssh-ping the instance.
+UbuntuOfficialAMI = yes
 
 [CHROOT]
 Tempdir=/tmp/upgrade-tester
