Simpler explanation for UbuntuOfficialAMI

--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -47,10 +47,8 @@ SSHKey=/home/andreas/aws/ssh-keys/ec2-keypair.pem
 ;the instance. For example:
 ;SecurityGroups = ssh,web
 SecurityGroups = ssh
-; Ubuntu official images have the root login disabled via a command
-; in /root/.ssh/authorized_keys. If the setting below is set to true,
-; two things happen: we login as "ubuntu" and use sudo to re-enable
-; the root login, and use the "ubuntu" user to ssh-ping the instance.
+; Set this to "yes" if using an Ubuntu official AMI as we need to
+; allow root logins
 UbuntuOfficialAMI = yes
 
 [CHROOT]
