--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -10,7 +10,7 @@ SupportSSH=DistUpgradeViewText,DistUpgradeViewNonInteractive
 # Distro contains global information about the upgrade
 [Distro]
 # the meta-pkgs we support
-MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-desktop, ubuntustudio-desktop, ichthux-desktop, mythbuntu-desktop, kubuntu-netbook
+MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-desktop, ubuntustudio-desktop, ichthux-desktop, mythbuntu-desktop, ubuntu-netbook, kubuntu-netbook
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 Demotions=demoted.cfg
 RemoveEssentialOk=sysvinit, sysvutils, belocs-locales-bin
@@ -55,6 +55,9 @@ ForcedObsoletes=ivman, cups-pdf, gtk-qt-engine
 
 [kubuntu-netbook]
 KeyDependencies=kdm, kubuntu-netbook-default-settings
+
+[ubuntu-netbook]
+KeyDependencies=gdm, ubuntu-netbook-default-settings
 
 [xubuntu-desktop]
 KeyDependencies=xubuntu-artwork, xubuntu-default-settings, xfwm4
