updated to support lucid to maverick upgrades

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -78,8 +78,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=karmic
-To=lucid
+From=lucid
+To=maverick
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
