* DistUpgrade/DistUpgradeController.py:  - use pockets from DistUpgrade.cfg instead of hard-coding them * tests/test_sources_list.py:   - update tests

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -83,6 +83,7 @@ To=maverick
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
+Pockets=security,updates,proposed,backports
 ;AllowThirdParty=False
 
 ;[PreRequists]
