* DistUpgrade/mirrors.cfg:   - support upgrades when sources.list uses the new     mirror://mirrors.ubuntu.com/mirrors.txt     uri

--- a/DistUpgrade/mirrors.cfg
+++ b/DistUpgrade/mirrors.cfg
@@ -4,6 +4,7 @@ http://security.ubuntu.com/ubuntu/
 ftp://archive.ubuntu.com/ubuntu/
 ftp://security.ubuntu.com/ubuntu/
 mirror://launchpad.net/ubuntu/+countrymirrors-archive
+mirror://mirrors.ubuntu.com/mirrors.txt
 http://ports.ubuntu.com/
 ftp://ports.ubuntu.com/
 http://ports.ubuntu.com/ubuntu-ports/
