* AutoUpgradeTester/run_and_publish_tests.sh:   - remove lts tests * AutoUpgradeTester/profile/:   - updated for lucid->maverick upgrade testing

--- a/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
@@ -7,8 +7,8 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 AllowUnauthenticated=yes
 
 [Sources]
-From=karmic
-To=lucid
+From=lucid
+To=maverick
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
@@ -32,7 +32,7 @@ DpkgProgressLog=yes
 
 [KVM]
 ImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/karmic-i386.qcow2
+BaseImage=/var/cache/auto-upgrade-tester/lucid-i386.qcow2
 CacheBaseImage=yes
 
 [CHROOT]
