--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -11,8 +11,8 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 ;EnableChrootRsync=yes
 
 [Sources]
-From=karmic
-To=lucid
+From=lucid
+To=maverick
 
 [NonInteractive]
 ProfileName=server
