--- a/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
@@ -2,8 +2,8 @@
 View=DistUpgradeViewNonInteractive
 
 [Sources]
-From=karmic
-To=lucid
+From=lucid
+To=maverick
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
@@ -36,7 +36,7 @@ DpkgProgressLog=yes
 ;VncNum=3
 ;SshPort=54324
 ImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/karmic-i386.qcow2
+BaseImage=/var/cache/auto-upgrade-tester/lucid-i386.qcow2
 CacheBaseImage=yes
 ;SwapImage=jeos/swap.qcow2
 
