--- a/debian/control
+++ b/debian/control
@@ -59,7 +59,7 @@ Architecture: all
 XB-Python-Version: ${python:Versions}
 Depends: ${python:Depends}, ${misc:Depends}
 Recommends: qemu-kvm|kvm, ubuntu-vm-builder
-Description: Test release upgrades in a virtual environement
+Description: Test release upgrades in a virtual environment
  A tool to do QA for release upgrades in ubuntu that performs upgrades
  in a virtual environment. Supported backends are "chroot", "kvm" and
  "EC2".
