--- a/data/update-manager.schemas.in
+++ b/data/update-manager.schemas.in
@@ -96,6 +96,21 @@
       </locale>
     </schema>
     <schema>
+      <key>/schemas/apps/update-manager/summary_before_name</key>
+      <applyto>/apps/update-manager/summary_before_name</applyto>
+      <owner>update-manager</owner>
+      <type>bool</type>
+      <default>True</default>
+		
+      <locale name="C">
+        <short>Show package summary before package name in update list</short>
+        <long>
+	  If this key is set, the main update list window will
+	  show the package summary before the package name.
+        </long>
+      </locale>
+    </schema>
+    <schema>
       <key>/schemas/apps/update-manager/first_run</key>
       <applyto>/apps/update-manager/first_run</applyto>
       <owner>update-manager</owner>
