--- a/DistUpgrade/mirrors.cfg
+++ b/DistUpgrade/mirrors.cfg
@@ -11,6 +11,8 @@ http://ports.ubuntu.com/ubuntu-ports/
 ftp://ports.ubuntu.com/ubuntu-ports/
 http://old-releases.ubuntu.com/
 ftp://old-releases.ubuntu.com/
+http://extras.ubuntu.com/
+ftp://extras.ubuntu.com/
 
 #commercial (both urls are valid
 http://archive.canonical.com
