AutoUpgradeTester/install_blacklist.cfg: add bacula-director-mysql and linux-backports-modules-wireless-2.6.32-{21,22,23}-generic-pae to the install blacklist

--- a/AutoUpgradeTester/install_blacklist.cfg
+++ b/AutoUpgradeTester/install_blacklist.cfg
@@ -21,3 +21,9 @@ emacs-snapshot
 ec2-init
 linux-image-ec2
 linux-image-2.6.31-302-ec2
+
+bacula-director-mysql
+linux-backports-modules-wireless-2.6.32-21-generic-pae
+linux-backports-modules-wireless-2.6.32-22-generic-pae
+linux-backports-modules-wireless-2.6.32-23-generic-pae
+
