AutoUpgradeTester/install_blacklist.cfg: add missing linux-backports-modules-wireless-2.6.32-24-generic-pae

--- a/AutoUpgradeTester/install_blacklist.cfg
+++ b/AutoUpgradeTester/install_blacklist.cfg
@@ -26,4 +26,5 @@ bacula-director-mysql
 linux-backports-modules-wireless-2.6.32-21-generic-pae
 linux-backports-modules-wireless-2.6.32-22-generic-pae
 linux-backports-modules-wireless-2.6.32-23-generic-pae
+linux-backports-modules-wireless-2.6.32-24-generic-pae
 
