--- a/debian/control
+++ b/debian/control
@@ -50,8 +50,8 @@ Package: update-manager-kde
 Architecture: all
 XB-Python-Version: ${python:Versions}
 Depends: ${python:Depends}, ${misc:Depends}, update-manager-core, python-kde4, kdesudo
-Description: Support modules for Update Notifier KDE
- Support modules for update-notifier-kde to check for new distro releases 
+Description: Support modules for KPackageKit
+ Support modules for KPackageKit to check for new distro releases 
  and download the dist-upgrade tool.
 
 Package: auto-upgrade-tester
