* DistUpgrade/DistUpgrade.cfg:   - add blcr-dkms to the "BadVersions" variable. The current blcr-dkms     source will not build with 2.6.35. Adding it here will cause the     upgrade to abort with a message if it is installed.     It also means that if support for 2.6.35 is added to blcr-dkms via     a SRU that will automatically unblock the upgrade (LP: #555729)

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -28,9 +28,8 @@ PostUpgradeUpgrade=brasero
 PostInstallScripts=./xorg_fix_proprietary.py
 EnableApport=no
 # this supported blacklisting certain versions to ensure we do not upgrade
-#  - the openoffice.org-filter-binfilter causes a pre-depends cycle error
-#    (#516727)
-BadVersions=openoffice.org-filter-binfilter_1:3.2.0~rc4-1ubuntu1
+#  - blcr-dkms fails to build on kernel 2.6.35
+BadVersions=blcr-dkms_0.8.2-13
 # ubiquity slideshow
 #SlideshowUrl=http://people.canonical.com/~mvo/ubiquity-slideshow-upgrade/slides/
 
