* DistUpgrade/*:   - updated for natty * tests/test_prerequists.py:   - fix jaunty test now that this is moved to old-releases.ubuntu.com * pre-build.sh:   - run testsuite

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -77,8 +77,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=lucid
-To=maverick
+From=maverick
+To=natty
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
