--- a/tests/data-sources-list-test/prerequists-sources.list.in
+++ b/tests/data-sources-list-test/prerequists-sources.list.in
@@ -1,7 +1,6 @@
 # sources.list fragment for pre-requists (mirror from sources.list + fallback)
 # this is safe to remove after the upgrade
-${mirror}
-deb http://archive.ubuntu.com/ubuntu/ feisty-backports main/debian-installer
+deb http://old-releases.ubuntu.com/ubuntu/ feisty-backports main/debian-installer
 
 # below is just for testing
 #deb http://archive.dogfood.launchpad.net/ubuntu feisty-backports main/debian-installer
