--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Description: manage release upgrades
 Package: update-manager
 Architecture: all
 XB-Python-Version: ${python:Versions}
-Depends: ${python:Depends}, ${misc:Depends}, update-manager-core (= ${source:Version}), aptdaemon|synaptic, gksu, python-dbus, python-vte, python-gconf
+Depends: ${python:Depends}, ${misc:Depends}, update-manager-core (= ${source:Version}), python-aptdaemon-gtk|synaptic, python-dbus, python-vte, python-gconf
 Recommends: software-properties-gtk (>= 0.71.2)
 Description: GNOME application that manages apt updates
  This is the GNOME apt update manager. It checks for updates and lets the user
