* debian/rules:   - push EOLReleaseAnnouncement to the server too

--- a/debian/rules
+++ b/debian/rules
@@ -47,6 +47,7 @@ binary-indep: build install
 	   ./build-tarball.sh && \
 	   mkdir -p $(DEBVER)  && \
 	   cp $(DIST).tar.gz ReleaseAnnouncement DevelReleaseAnnouncement \
+	      EOLReleaseAnnouncement\
 	      $(DEBVER) && \
 	   tar czvf ../../$(TARNAME) $(DEBVER)/ReleaseAnnouncement $(DEBVER)/DevelReleaseAnnouncement $(DEBVER)/$(DIST).tar.gz )
 	dpkg-distaddfile $(TARNAME) raw-dist-upgrader -
