* AutoUpgradeTester/profile/*/DistUpgrade.cfg:   - update to auto test maverick to natty

--- a/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
@@ -7,8 +7,8 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 AllowUnauthenticated=yes
 
 [Sources]
-From=lucid
-To=maverick
+From=maverick
+To=natty
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
