--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -11,8 +11,8 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 ;EnableChrootRsync=yes
 
 [Sources]
-From=lucid
-To=maverick
+From=maverick
+To=natty
 
 [NonInteractive]
 ProfileName=server
