--- a/debian/rules
+++ b/debian/rules
@@ -70,7 +70,7 @@ binary-arch: build install
 	dh_strip
 	dh_compress
 	dh_fixperms
-	dh_python2
+	dh_python2 --skip-private
 	dh_installdeb
 	dh_shlibdeps
 	dh_gencontrol
