--- a/debian/rules
+++ b/debian/rules
@@ -46,10 +46,10 @@ binary-indep: build install
 	(cd DistUpgrade/ && \
 	   ./build-tarball.sh && \
 	   mkdir -p $(DEBVER)  && \
-	   cp $(DIST).tar.gz ReleaseAnnouncement* DevelReleaseAnnouncement* \
-	      EOLReleaseAnnouncement* \
-	      $(DEBVER) && \
-	   tar czvf ../../$(TARNAME) $(DEBVER)/ReleaseAnnouncement $(DEBVER)/DevelReleaseAnnouncement $(DEBVER)/$(DIST).tar.gz )
+	   cp $(DIST).tar.gz ./*ReleaseAnnouncement* $(DEBVER) && \
+	   tar czvf ../../$(TARNAME) \
+	       $(DEBVER)/*ReleaseAnnouncement* \
+               $(DEBVER)/$(DIST).tar.gz )
 	dpkg-distaddfile $(TARNAME) raw-dist-upgrader -
 
 # Build architecture-dependent files here.
