AutoUpgradeTester/profile/mythbuntu/DistUpgrade.cfg: updated for maverick->natty

--- a/AutoUpgradeTester/profile/mythbuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/mythbuntu/DistUpgrade.cfg
@@ -2,8 +2,8 @@
 View=DistUpgradeViewNonInteractive
 
 [Sources]
-From=karmic
-To=lucid
+From=maverick
+To=natty
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
