* AutoUpgradeTester/install_blacklist.cfg:   - update blacklist for creating main-all images

--- a/AutoUpgradeTester/install_blacklist.cfg
+++ b/AutoUpgradeTester/install_blacklist.cfg
@@ -28,3 +28,6 @@ linux-backports-modules-wireless-2.6.32-22-generic-pae
 linux-backports-modules-wireless-2.6.32-23-generic-pae
 linux-backports-modules-wireless-2.6.32-24-generic-pae
 
+# no fun
+cloud-init
+eucalyptus-.*
