--- a/debian/control
+++ b/debian/control
@@ -14,8 +14,8 @@ Section: admin
 XB-Python-Version: ${python:Versions}
 Depends: ${python:Depends}, ${misc:Depends}, python-apt (>= 0.7.13.4ubuntu3),  lsb-release,  python-gnupginterface
 Recommends: libpam-modules (>= 1.0.1-9ubuntu3)
-Replaces: update-manager (<< 1:0.93.7)
-Conflicts: update-manager (<< 1:0.93.7), computer-janitor (<= 1.11-0ubuntu1)
+Replaces: update-manager (<< 1:0.146.2)
+Breaks: update-manager (<< 1:0.146.2), computer-janitor (<= 1.11-0ubuntu1)
 Description: manage release upgrades
  This is the core of update-manager and the release upgrader
 
