--- a/AutoUpgradeTester/profile/lts-server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-server/DistUpgrade.cfg
@@ -7,8 +7,8 @@ AllowUnauthenticated=yes
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 
 [Sources]
-From=hardy
-To=lucid
+From=lucid
+To=natty
 
 [NonInteractive]
 ProfileName = lts-server
@@ -31,7 +31,7 @@ VncNum=1
 SshPort=54322
 ImageDir=/var/cache/auto-upgrade-tester/
 CacheImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/hardy-i386.qcow2
+BaseImage=/var/cache/auto-upgrade-tester/lucid-i386.qcow2
 CacheBaseImage=yes
 
 [CHROOT]
