--- a/AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg
@@ -2,54 +2,31 @@
 #View=DistUpgradeViewGtk
 View=DistUpgradeViewNonInteractive
 
-# Distro contains global information about the upgrade
-[Distro]
-# the meta-pkgs we support
-MetaPkgs=ubuntu-desktop, kubuntu-desktop, edubuntu-desktop, xubuntu-desktop
-BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
-PostUpgradePurge=xorg-common, libgl1-mesa
-Demotions=demoted.cfg
-RemoveEssentialOk=sysvinit
-RemovalBlacklistFile=removal_blacklist.cfg
-
-# information about the individual meta-pkgs
-[ubuntu-desktop]
-KeyDependencies=gdm, gnome-panel, ubuntu-artwork
-# those pkgs will be marked remove right after the distUpgrade in the cache
-PostUpgradeRemove=xchat, xscreensaver
-
-[kubuntu-desktop]
-KeyDependencies=kdm, kicker, kubuntu-artwork-usplash
-# those packages are marked as obsolete right after the upgrade
-ForcedObsoletes=ivman
-
-[edubuntu-desktop]
-KeyDependencies=edubuntu-artwork, tuxpaint
-
-[xubuntu-desktop]
-KeyDependencies=xubuntu-artwork-usplash, xubuntu-default-settings, xfce4
-
-
-[Files]
-BackupExt=distUpgrade
-
 [Sources]
-From=edgy
-To=feisty
+From=maverick
+To=natty
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
 [Network]
 MaxRetries=3
 
-
 [NonInteractive]
 ProfileName = xubuntu
 BasePkg = xubuntu-desktop
 ;AdditionalPkgs = additional_pkgs.cfg
 Mirror = http://archive.ubuntu.com/ubuntu
-Proxy=http://192.168.1.1:3128/
+Proxy=http://192.168.178.75:8000
 ForceOverwrite=no
-CacheTarball=yes
-Components=main,restricted
+Components=main,restricted,universe
 Pockets=security,updates
+ResultDir=/var/cache/auto-upgrade-tester/result
+SSHKey=/var/cache/auto-upgrade-tester/ssh-key
+
+[KVM]
+;VncNum=3
+;SshPort=54324
+ImageDir=/var/cache/auto-upgrade-tester/
+BaseImage=/var/cache/auto-upgrade-tester/maverick-i386.qcow2
+CacheBaseImage=yes
+;SwapImage=jeos/swap.qcow2
