--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -26,7 +26,7 @@ PostUpgradeRemove=libflashsupport, kvm-source, gtk-qt-engine, libparted1.8-12, u
 PostUpgradeUpgrade=brasero
 #PostUpgradeInstall=apt
 PostInstallScripts=./xorg_fix_proprietary.py
-EnableApport=no
+EnableApport=yes
 # this supported blacklisting certain versions to ensure we do not upgrade
 #  - blcr-dkms fails to build on kernel 2.6.35
 BadVersions=blcr-dkms_0.8.2-13
