move unity support into its own class so that its optional

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -21,6 +21,7 @@ UpdateManager/MetaReleaseGObject.py
 UpdateManager/ReleaseNotesViewer.py
 UpdateManager/GtkProgress.py
 UpdateManager/UpdateManager.py
+UpdateManager/UnitySupport.py
 UpdateManagerText/UpdateManagerText.py
 UpdateManager/Core/MyCache.py
 UpdateManager/Core/UpdateList.py
