--- a/debian/control
+++ b/debian/control
@@ -23,8 +23,8 @@ Description: manage release upgrades
 Package: update-manager
 Architecture: all
 XB-Python-Version: ${python:Versions}
-Depends: ${python:Depends}, ${misc:Depends}, update-manager-core (= ${source:Version}), python-aptdaemon-gtk (>= 0.40)|synaptic, python-dbus, python-vte, python-gconf, gir1.2-dbusmenu-gtk-0.4, gir1.2-unity-3.0
-Recommends: software-properties-gtk (>= 0.71.2)
+Depends: ${python:Depends}, ${misc:Depends}, update-manager-core (= ${source:Version}), python-aptdaemon-gtk (>= 0.40)|synaptic, python-dbus, python-vte, python-gconf
+Recommends: software-properties-gtk (>= 0.71.2), gir1.2-dbusmenu-gtk-0.4, gir1.2-unity-3.0
 Description: GNOME application that manages apt updates
  This is the GNOME apt update manager. It checks for updates and lets the user
  choose which to install.
