--- a/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
@@ -2,8 +2,8 @@
 View=DistUpgradeViewNonInteractive
 
 [Sources]
-From=maverick
-To=natty
+From=natty
+To=oneiric
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
@@ -36,7 +36,7 @@ DpkgProgressLog=yes
 ;VncNum=3
 ;SshPort=54324
 ImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/maverick-i386.qcow2
+BaseImage=/var/cache/auto-upgrade-tester/natty-i386.qcow2
 CacheBaseImage=yes
 ;SwapImage=jeos/swap.qcow2
 
