* AutoUpgradeTester/profile/*:   - updated for natty->oneiric

--- a/AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg
@@ -3,8 +3,8 @@
 View=DistUpgradeViewNonInteractive
 
 [Sources]
-From=maverick
-To=natty
+From=natty
+To=oneiric
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
@@ -27,6 +27,6 @@ SSHKey=/var/cache/auto-upgrade-tester/ssh-key
 ;VncNum=3
 ;SshPort=54324
 ImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/maverick-i386.qcow2
+BaseImage=/var/cache/auto-upgrade-tester/natty-i386.qcow2
 CacheBaseImage=yes
 ;SwapImage=jeos/swap.qcow2
