--- a/AutoUpgradeTester/profile/euca-nc/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/euca-nc/DistUpgrade.cfg
@@ -6,8 +6,8 @@ View=DistUpgradeViewNonInteractive
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 
 [Sources]
-From=maverick
-To=natty
+From=natty
+To=oneiric
 
 [NonInteractive]
 ProfileName=eua-nc
@@ -32,7 +32,7 @@ VncNum=1
 SshPort=54322
 ImageDir=/var/cache/auto-upgrade-tester/
 CacheImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/maverick-i386.qcow2
+BaseImage=/var/cache/auto-upgrade-tester/natty-i386.qcow2
 ;SwapImage=jeos/swap.qcow2
 CacheBaseImage=yes
 
