--- a/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
@@ -7,8 +7,8 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 AllowUnauthenticated=yes
 
 [Sources]
-From=maverick
-To=natty
+From=natty
+To=oneiric
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
@@ -32,7 +32,7 @@ DpkgProgressLog=yes
 
 [KVM]
 ImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/maverick-i386.qcow2
+BaseImage=/var/cache/auto-upgrade-tester/natty-i386.qcow2
 CacheBaseImage=yes
 
 [CHROOT]
