--- a/AutoUpgradeTester/profile/main-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/main-all/DistUpgrade.cfg
@@ -6,8 +6,8 @@ View=DistUpgradeViewNonInteractive
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 
 [Sources]
-From=maverick
-To=natty
+From=natty
+To=oneiric
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
@@ -27,7 +27,7 @@ DebugBrokenScripts=yes
 
 [KVM]
 ImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/maverick-i386.qcow2
+BaseImage=/var/cache/auto-upgrade-tester/natty-i386.qcow2
 CacheBaseImage=yes
 VncNum=2
 SshPort=54323
