--- a/AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg
@@ -27,6 +27,6 @@ SSHKey=/var/cache/auto-upgrade-tester/ssh-key
 ;VncNum=3
 ;SshPort=54324
 ImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/natty-i386.qcow2
+BaseImage=%(ImageDir)s/natty-i386.qcow2
 CacheBaseImage=yes
 ;SwapImage=jeos/swap.qcow2
