AutoUpgradeTester/profile/*: use %(ImageDir)s in all the profiles to avoid having to resolve merge conflicts if ImageDir is changed

--- a/AutoUpgradeTester/profile/auto-install-tester/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/auto-install-tester/DistUpgrade.cfg
@@ -37,7 +37,7 @@ VncNum=3
 SshPort=54324
 ImageDir=/var/cache/auto-upgrade-tester/
 CacheImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/lucid-i386.qcow2
+BaseImage=%(ImageDir)s/lucid-i386.qcow2
 ;SwapImage=jeos/swap.qcow2
 CacheBaseImage=yes
 
