--- a/AutoUpgradeTester/profile/euca-cloud/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/euca-cloud/DistUpgrade.cfg
@@ -32,7 +32,7 @@ VncNum=1
 SshPort=54322
 ImageDir=/var/cache/auto-upgrade-tester/
 CacheImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/natty-i386.qcow2
+BaseImage=%(ImageDir)s/natty-i386.qcow2
 ;SwapImage=jeos/swap.qcow2
 CacheBaseImage=yes
 
