--- a/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
@@ -32,7 +32,7 @@ DpkgProgressLog=yes
 
 [KVM]
 ImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/natty-i386.qcow2
+BaseImage=%(ImageDir)s/natty-i386.qcow2
 CacheBaseImage=yes
 
 [CHROOT]
