--- a/AutoUpgradeTester/profile/mythbuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/mythbuntu/DistUpgrade.cfg
@@ -36,7 +36,7 @@ DpkgProgressLog=yes
 ;VncNum=3
 ;SshPort=54324
 ImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/natty-i386.qcow2
+BaseImage=%(ImageDir)s/natty-i386.qcow2
 CacheBaseImage=yes
 ;SwapImage=jeos/swap.qcow2
 
