--- a/AutoUpgradeTester/profile/dapper-hardy-lucid-ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/dapper-hardy-lucid-ubuntu/DistUpgrade.cfg
@@ -44,7 +44,7 @@ VncNum=1
 SshPort=54322
 ImageDir=/var/cache/auto-upgrade-tester/
 CacheImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/dapper-i386.qcow2
+BaseImage=%(ImageDir)s/dapper-i386.qcow2
 ;SwapImage=jeos/swap.qcow2
 CacheBaseImage=yes
 
