--- a/AutoUpgradeTester/profile/lts-mythbuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-mythbuntu/DistUpgrade.cfg
@@ -28,7 +28,7 @@ SSHKey=/var/cache/auto-upgrade-tester/ssh-key
 [KVM]
 ImageDir=/var/cache/auto-upgrade-tester/
 CacheImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/hardy-i386.qcow2
+BaseImage=%(ImageDir)s/hardy-i386.qcow2
 CacheBaseImage=yes
 
 [CHROOT]
