--- a/AutoUpgradeTester/profile/lts-server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-server/DistUpgrade.cfg
@@ -31,7 +31,7 @@ VncNum=1
 SshPort=54322
 ImageDir=/var/cache/auto-upgrade-tester/
 CacheImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/lucid-i386.qcow2
+BaseImage=%(ImageDir)s/lucid-i386.qcow2
 CacheBaseImage=yes
 
 [CHROOT]
