--- a/AutoUpgradeTester/profile/main-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/main-all/DistUpgrade.cfg
@@ -27,7 +27,7 @@ DebugBrokenScripts=yes
 
 [KVM]
 ImageDir=/var/cache/auto-upgrade-tester/
-BaseImage=/var/cache/auto-upgrade-tester/natty-i386.qcow2
+BaseImage=%(ImageDir)s/natty-i386.qcow2
 CacheBaseImage=yes
 VncNum=2
 SshPort=54323
