fix some glib import, but leave one in as timeout_add_seconds is not introspectable yet

--- a/debian/control
+++ b/debian/control
@@ -30,13 +30,13 @@ Breaks: update-manager (<< 1:0.146.2),
 Description: manage release upgrades
  This is the core of update-manager and the release upgrader
 
-
 Package: update-manager
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, 
          update-manager-core (= ${source:Version}),
          python-aptdaemon-gtk (>= 0.40)|synaptic, 
          python-dbus,
+         python-gobject,
          gir1.2-vte-2.90, 
          gir1.2-gtk-3.0, 
          python-gconf
