initial port from gconf -> gsettings, this needs some cleanup in the naming still

--- a/data/update-manager.schemas.in
+++ b/data/update-manager.schemas.in
@@ -33,17 +33,28 @@
       </locale>
     </schema>
     <schema>
-      <key>/schemas/apps/update-manager/window_size</key>
-      <applyto>/apps/update-manager/window_size</applyto>
+      <key>/schemas/apps/update-manager/window_width</key>
+      <applyto>/apps/update-manager/window_width</applyto>
       <owner>update-manager</owner>
-      <type>pair</type>
-      <car_type>int</car_type>
-      <cdr_type>int</cdr_type>
+      <type>int</type>
 		
       <locale name="C">
-        <short>The window size</short>
+        <short>The window width</short>
         <long>
-	    Stores the size of the update-manager dialog
+	    Stores the width of the update-manager dialog
+        </long>
+      </locale>
+    </schema>
+    <schema>
+      <key>/schemas/apps/update-manager/window_height</key>
+      <applyto>/apps/update-manager/window_height</applyto>
+      <owner>update-manager</owner>
+      <type>int</type>
+		
+      <locale name="C">
+        <short>The window height</short>
+        <long>
+	    Stores the height of the update-manager dialog
         </long>
       </locale>
     </schema>
