--- a/debian/rules
+++ b/debian/rules
@@ -61,7 +61,7 @@ binary-arch: build install
 	dh_installmime
 	dh_desktop
 	dh_icons
-	dh_gconf
+	dh_installgsettings
 	dh_installchangelogs
 	dh_installdocs
 	dh_installexamples
