--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,6 +8,7 @@ DistUpgrade/DistUpgradeController.py
 DistUpgrade/DistUpgradeQuirks.py
 DistUpgrade/DistUpgradeMain.py
 DistUpgrade/DistUpgradeViewGtk.py
+DistUpgrade/DistUpgradeViewGtk3.py
 DistUpgrade/DistUpgradeViewKDE.py
 DistUpgrade/DistUpgradeView.py
 DistUpgrade/DistUpgradeFetcherCore.py
@@ -31,7 +32,7 @@ UpdateManager/Core/utils.py
 [type: gettext/glade]data/glade/UpdateManager.ui
 [type: gettext/glade]data/glade/UpgradePromptDialog.ui
 data/update-manager.desktop.in
-data/update-manager.schemas.in
+data/com.ubuntu.update-manager.gschema.xml.in
 update-manager
 do-release-upgrade
 check-new-release-gtk
