AutoUpgradeTester/profile/*/DistUpgrade.cfg: add AutoUpgradeTesterBaseDir to have a single place to update the base dir

--- a/AutoUpgradeTester/profile/euca-cloud/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/euca-cloud/DistUpgrade.cfg
@@ -9,6 +9,9 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 From=natty
 To=oneiric
 
+[DEFAULT]
+AutoUpgradeTesterBaseDir=/var/cache
+
 [NonInteractive]
 ProfileName=eua-cloud
 BasePkg = ubuntu-standard
@@ -22,16 +25,16 @@ Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
 ;AddRepo=local_testing.list
 DpkgProgressLog=yes
-ResultDir=/var/cache/auto-upgrade-tester/result
-SSHKey=/var/cache/auto-upgrade-tester/ssh-key
+ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
+SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 DebugBrokenScripts=yes
 
 [KVM]
 Virtio=True
 VncNum=1
 SshPort=54322
-ImageDir=/var/cache/auto-upgrade-tester/
-CacheImageDir=/var/cache/auto-upgrade-tester/
+ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
+CacheImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 BaseImage=%(ImageDir)s/natty-i386.qcow2
 ;SwapImage=jeos/swap.qcow2
 CacheBaseImage=yes
