--- a/AutoUpgradeTester/profile/lts-kubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-kubuntu/DistUpgrade.cfg
@@ -10,6 +10,9 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 From=hardy
 To=karmic
 
+[DEFAULT]
+AutoUpgradeTesterBaseDir=/var/cache
+
 [NonInteractive]
 ProfileName=lts-kubuntu
 BasePkg = kubuntu-desktop
@@ -22,12 +25,12 @@ Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
 ;AddRepo=mvo-ppa.list
 DpkgProgressLog=yes
-ResultDir=/var/cache/auto-upgrade-tester/result
-SSHKey=/var/cache/auto-upgrade-tester/ssh-key
+ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
+SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 
 [KVM]
-ImageDir=/var/cache/auto-upgrade-tester/
-CacheImageDir=/var/cache/auto-upgrade-tester/
+ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
+CacheImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 BaseImage=%(ImageDir)s/hardy-i386.qcow2
 CacheBaseImage=yes
 
