--- a/AutoUpgradeTester/profile/lts-server-tasks/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-server-tasks/DistUpgrade.cfg
@@ -10,6 +10,9 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 From=hardy
 To=lucid
 
+[DEFAULT]
+AutoUpgradeTesterBaseDir=/var/cache
+
 [NonInteractive]
 ProfileName = lts-server-tasks
 BasePkg = ubuntu-standard
@@ -22,15 +25,15 @@ Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
 ;AddRepo=local_testing.list
 DpkgProgressLog=yes
-ResultDir=/var/cache/auto-upgrade-tester/result
-SSHKey=/var/cache/auto-upgrade-tester/ssh-key
+ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
+SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 
 [KVM]
 Virtio=True
 VncNum=1
 SshPort=54322
-ImageDir=/var/cache/auto-upgrade-tester/
-CacheImageDir=/var/cache/auto-upgrade-tester/
+ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
+CacheImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 BaseImage=%(ImageDir)s/hardy-i386.qcow2
 CacheBaseImage=yes
 
