--- a/AutoUpgradeTester/profile/mythbuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/mythbuntu/DistUpgrade.cfg
@@ -12,6 +12,9 @@ Components=main,restricted,universe,multiverse
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 AllowUnauthenticated=yes
 
+[DEFAULT]
+AutoUpgradeTesterBaseDir=/var/cache
+
 [NonInteractive]
 ProfileName = mythbuntu
 BasePkg = mythbuntu-desktop
@@ -26,16 +29,16 @@ UpgradeFromDistOnBootstrap=true
 WorkaroundNetworkManager=true
 ;RealReboot=yes
 ;AddRepo=mvo-ppa.list
-ResultDir=/var/cache/auto-upgrade-tester/result
+ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
 ;ResultDir=./result
-SSHKey=/var/cache/auto-upgrade-tester/ssh-key
+SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 DebugBrokenScripts=yes
 DpkgProgressLog=yes
 
 [KVM]
 ;VncNum=3
 ;SshPort=54324
-ImageDir=/var/cache/auto-upgrade-tester/
+ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 BaseImage=%(ImageDir)s/natty-i386.qcow2
 CacheBaseImage=yes
 ;SwapImage=jeos/swap.qcow2
@@ -46,5 +49,5 @@ AMI=ami-0d729464
 SSHKey=./ec2-keypair.pem
 
 [CHROOT]
-Tempdir=/var/cache/auto-upgrader-tester/chroot
+Tempdir=%(AutoUpgradeTesterBaseDir)s/auto-upgrader-tester/chroot
 CacheTarball=yes
