--- a/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
@@ -12,6 +12,9 @@ To=oneiric
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
+[DEFAULT]
+AutoUpgradeTesterBaseDir=/var/cache
+
 [NonInteractive]
 ProfileName=kubuntu
 BasePkg = kubuntu-desktop
@@ -25,16 +28,16 @@ Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
 WorkaroundNetworkManager=true
 RealReboot=yes
-ResultDir=/var/cache/auto-upgrade-tester/result
-SSHKey=/var/cache/auto-upgrade-tester/ssh-key
+ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
+SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 DebugBrokenScripts=yes
 DpkgProgressLog=yes
 
 [KVM]
-ImageDir=/var/cache/auto-upgrade-tester/
+ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 BaseImage=%(ImageDir)s/natty-i386.qcow2
 CacheBaseImage=yes
 
 [CHROOT]
-Tempdir=/var/cache/auto-upgrader-tester/chroot
+Tempdir=%(AutoUpgradeTesterBaseDir)s/auto-upgrader-tester/chroot
 CacheTarball=yes
