--- a/AutoUpgradeTester/profile/lts-main-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-main-all/DistUpgrade.cfg
@@ -11,6 +11,9 @@ To=lucid
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
+[DEFAULT]
+AutoUpgradeTesterBaseDir=/var/cache
+
 [NonInteractive]
 ProfileName = lts-main-all
 BasePkg = ubuntu-standard
@@ -22,16 +25,16 @@ PostBootstrapScript=/usr/share/pyshared/AutoUpgradeTester/install_all.py
 Components=main,restricted
 Pockets=security,updates
 WorkaroundNetworkManager=yes
-ResultDir=/var/cache/auto-upgrade-tester/result
+ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
 DebugBrokenScripts=yes
 
 [KVM]
-ImageDir=/var/cache/auto-upgrade-tester/
+ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 BaseImage=%(ImageDir)s/hardy-i386.qcow2
 CacheBaseImage=yes
 VncNum=2
 SshPort=54323
 
 [CHROOT]
-Tempdir=/var/cache/auto-upgrader-tester/chroot
+Tempdir=%(AutoUpgradeTesterBaseDir)s/auto-upgrader-tester/chroot
 CacheTarball=yes
