--- a/AutoUpgradeTester/profile/python-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/python-all/DistUpgrade.cfg
@@ -14,6 +14,9 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 From=natty
 To=oneiric
 
+[DEFAULT]
+AutoUpgradeTesterBaseDir=/var/cache
+
 [NonInteractive]
 ProfileName=python-all
 BasePkg = ubuntu-standard
@@ -27,8 +30,8 @@ Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
 ;AddRepo=local_testing.list
 DpkgProgressLog=yes
-ResultDir=/var/cache/auto-upgrade-tester/result
-SSHKey=/var/cache/auto-upgrade-tester/ssh-key
+ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
+SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 DebugBrokenScripts=yes
 PostBootstrapScript=/usr/share/pyshared/AutoUpgradeTester/install_all-python.py
 
@@ -36,8 +39,8 @@ PostBootstrapScript=/usr/share/pyshared/AutoUpgradeTester/install_all-python.py
 Virtio=True
 VncNum=1
 SshPort=54322
-ImageDir=/var/cache/auto-upgrade-tester/
-CacheImageDir=/var/cache/auto-upgrade-tester/
+ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
+CacheImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 BaseImage=%(ImageDir)s/natty-i386.qcow2
 ;SwapImage=jeos/swap.qcow2
 CacheBaseImage=yes
