--- a/AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg
@@ -11,6 +11,9 @@ ValidMirrors = mirrors.cfg
 [Network]
 MaxRetries=3
 
+[DEFAULT]
+AutoUpgradeTesterBaseDir=/var/cache
+
 [NonInteractive]
 ProfileName = xubuntu
 BasePkg = xubuntu-desktop
@@ -20,13 +23,13 @@ Proxy=http://192.168.178.75:8000
 ForceOverwrite=no
 Components=main,restricted,universe
 Pockets=security,updates
-ResultDir=/var/cache/auto-upgrade-tester/result
-SSHKey=/var/cache/auto-upgrade-tester/ssh-key
+ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
+SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 
 [KVM]
 ;VncNum=3
 ;SshPort=54324
-ImageDir=/var/cache/auto-upgrade-tester/
+ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 BaseImage=%(ImageDir)s/natty-i386.qcow2
 CacheBaseImage=yes
 ;SwapImage=jeos/swap.qcow2
