--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -33,6 +33,7 @@ DpkgProgressLog=yes
 ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
 SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 DebugBrokenScripts=yes
+UseUpgraderFromBzr=false
 
 [KVM]
 Virtio=True
