--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: update-manager
 Section: gnome
 Priority: optional
 Maintainer: Michael Vogt <michael.vogt@ubuntu.com>
-Build-Depends: debhelper (>= 5.0.51), 
+Build-Depends: debhelper (>= 7.0.50~), 
                python-all-dev,
                python-distutils-extra (>= 1.90), 
                python-apt (>= 0.7.5),
