--- a/debian/rules
+++ b/debian/rules
@@ -1,47 +1,14 @@
 #!/usr/bin/make -f
 
-PKG=update-manager
-DEBVER=$(shell LC_ALL=C dpkg-parsechangelog |sed -n -e '/^Version:/s/^Version: //p' | sed s/.*://)
-DEB_BUILD_PROG:=debuild --preserve-envvar PATH --preserve-envvar CCACHE_DIR -us -uc $(DEB_BUILD_PROG_OPTS)
-
 ARCH=all
 DIST=$(shell lsb_release -c -s)
+DEBVER=$(shell LC_ALL=C dpkg-parsechangelog |sed -n -e '/^Version:/s/^Version: //p' | sed s/.*://)
 TARNAME=dist-upgrader_$(DEBVER)_$(ARCH).tar.gz
 
-PYVERS=$(shell pyversions -vr)
+%:
+	dh $@ --with-python2
 
-build: build-stamp
-build-stamp: $(PYVERS:%=build-python%)
-build-python%:
-	dh_testdir
-	python$* setup.py build
-	touch $@
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp
-	python setup.py clean --all
-	find . -name "*.so" -exec rm {} \;
-	find . -name "*.o" -exec rm {} \;
-	find . -name "*.pyc" -exec rm {} \;
-	rm -f build-stamp
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean
-	dh_installdirs
-	set -e; \
-	for v in $(PYVERS); do \
-	  python$$v setup.py install --root=$(CURDIR)/debian/tmp/ --install-layout=deb   ; \
-	done
-
-# Build architecture-independent files here.
-binary-indep: build install
-	dh_testdir
-	dh_testroot
+override_dh_builddeb:
 	# now the dist-upgrader special tarball
 	(cd DistUpgrade/ && \
 	   ./build-tarball.sh && \
@@ -51,33 +18,5 @@ binary-indep: build install
 	       $(DEBVER)/*ReleaseAnnouncement* \
                $(DEBVER)/$(DIST).tar.gz )
 	dpkg-distaddfile $(TARNAME) raw-dist-upgrader -
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_install
-	dh_scrollkeeper
-	dh_installmime
-	dh_desktop
-	dh_icons
-	dh_installgsettings
-	dh_installchangelogs
-	dh_installdocs
-	dh_installexamples
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_python2 --skip-private
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
+	# build the deb
 	dh_builddeb
-
-binary: binary-indep binary-arch
-
-
-.PHONY: build clean binary-indep binary-arch binary install
