* DistUpgrade/DistUpgradeQuirks.py:   - when upgrading, ensure that zz-update-grub is early in     /etc/kernel/postinst.d to ensure we always have a good grub     config and not depend on the package upgrade ordering for that

--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -33,7 +33,7 @@ DpkgProgressLog=yes
 ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
 SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 DebugBrokenScripts=yes
-UseUpgraderFromBzr=false
+;UseUpgraderFromBzr=false
 
 [KVM]
 Virtio=True
