Added sections to the packages built. (LP: #371616)

--- a/debian/control
+++ b/debian/control
@@ -49,6 +49,7 @@ Description: GNOME application that manages apt updates
 
 Package: update-manager-text
 Architecture: all
+Section: admin
 Depends: ${python:Depends}, 
          ${misc:Depends}, 
          update-manager-core, 
@@ -59,6 +60,7 @@ Description: Text application that manages apt updates
 
 Package: update-manager-kde
 Architecture: all
+Section: kde
 Depends: ${python:Depends}, 
          ${misc:Depends}, 
          update-manager-core, 
@@ -70,6 +72,7 @@ Description: Support modules for KPackageKit
 
 Package: auto-upgrade-tester
 Architecture: all
+Section: devel
 Depends: ${python:Depends}, ${misc:Depends}
 Recommends: qemu-kvm|kvm, 
             ubuntu-vm-builder
