* debian/control:   - fix dependency on python-aptdaemon.gtk3widgets

--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,7 @@ Package: update-manager
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, 
          update-manager-core (= ${source:Version}),
-         python-aptdaemon-gtk (>= 0.40)|synaptic, 
+         python-aptdaemon.gtk3widgets (>= 0.40) | synaptic, 
          python-dbus,
          python-gobject (>= 2.28.6-2),
          gir1.2-vte-2.90, 
