--- a/AutoUpgradeTester/profile/lts-kubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-kubuntu/DistUpgrade.cfg
@@ -19,7 +19,7 @@ BasePkg = kubuntu-desktop
 AdditionalPkgs = pkgs.cfg
 Mirror = http://archive.ubuntu.com/ubuntu
 ;Proxy=http://192.168.1.1:3128/
-ForceOverwrite=no
+ForceOverwrite=yes
 Components=main,restricted
 Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
