--- a/AutoUpgradeTester/profile/lts-main-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-main-all/DistUpgrade.cfg
@@ -6,8 +6,8 @@ View=DistUpgradeViewNonInteractive
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 
 [Sources]
-From=hardy
-To=lucid
+From=lucid
+To=maverick
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
@@ -22,15 +22,22 @@ Mirror = http://archive.ubuntu.com/ubuntu
 ;Proxy=http://192.168.1.1:3128/
 ForceOverwrite=no
 PostBootstrapScript=/usr/share/pyshared/AutoUpgradeTester/install_all.py
-Components=main,restricted
+Components=main,restricted,universe
 Pockets=security,updates
 WorkaroundNetworkManager=yes
 ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
 DebugBrokenScripts=yes
+; add apt-chris repo
+AddRepo=local_testing.list
+; upgrade from the added repo *before* the regular upgrade runs
+AddRepoUpgradeImmediately=yes
+; apt.conf.d snippet to add
+AddAptConf=immediate_configure_all.conf
+
 
 [KVM]
 ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
-BaseImage=%(ImageDir)s/hardy-i386.qcow2
+BaseImage=%(ImageDir)s/lucid-i386.qcow2
 CacheBaseImage=yes
 VncNum=2
 SshPort=54323
