--- a/AutoUpgradeTester/profile/lts-server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-server/DistUpgrade.cfg
@@ -8,7 +8,7 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 
 [Sources]
 From=lucid
-To=natty
+To=maverick
 
 [DEFAULT]
 AutoUpgradeTesterBaseDir=/var/cache
@@ -23,7 +23,12 @@ ForceOverwrite=no
 Components=main,restricted
 Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
-;AddRepo=local_testing.list
+; add apt-chris repo
+AddRepo=local_testing.list
+; upgrade from the added repo *before* the regular upgrade runs
+AddRepoUpgradeImmediately=yes
+; apt.conf.d snippet to add
+AddAptConf=immediate_configure_all.conf
 DpkgProgressLog=yes
 ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
 SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
