--- a/AutoUpgradeTester/profile/lts-ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-ubuntu/DistUpgrade.cfg
@@ -7,8 +7,8 @@ AllowUnauthenticated=yes
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 
 [Sources]
-From=hardy
-To=lucid
+From=lucid
+To=maverick
 
 [DEFAULT]
 AutoUpgradeTesterBaseDir=/var/cache
@@ -23,15 +23,22 @@ ForceOverwrite=no
 Components=main,restricted
 Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
-;AddRepo=local_testing.list
+; add apt-chris repo
+AddRepo=local_testing.list
+; upgrade from the added repo *before* the regular upgrade runs
+AddRepoUpgradeImmediately=yes
+; apt.conf.d snippet to add
+AddAptConf=immediate_configure_all.conf
 DpkgProgressLog=yes
 ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
 SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 
 [KVM]
+VncNum=2
+SshPort=54323
 ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 CacheImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
-BaseImage=%(ImageDir)s/hardy-i386.qcow2
+BaseImage=%(ImageDir)s/lucid-i386.qcow2
 CacheBaseImage=yes
 
 [CHROOT]
