--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@ DEBVER=$(shell LC_ALL=C dpkg-parsechangelog |sed -n -e '/^Version:/s/^Version: /
 TARNAME=dist-upgrader_$(DEBVER)_$(ARCH).tar.gz
 
 %:
-	dh $@ --with-python2
+	dh $@ --with=python2
 
 override_dh_auto_clean:
 	dh_auto_clean
