--- a/AutoUpgradeTester/profile/eduubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/eduubuntu/DistUpgrade.cfg
@@ -1,62 +1,53 @@
 [View]
-#View=DistUpgradeViewGtk
 View=DistUpgradeViewNonInteractive
 
-# Distro contains global information about the upgrade
-[Distro]
-# the meta-pkgs we support
-MetaPkgs=ubuntu-desktop, kubuntu-desktop, edubuntu-desktop, xubuntu-desktop
-BaseMetaPkgs=ubuntu-minimal,ubuntu-standard
-PostUpgradePurge=xorg-common, libgl1-mesa
-Demotions=demoted.cfg
-RemoveEssentialOk=sysvinit
-RemovalBlacklistFile=removal_blacklist.cfg
-
-# information about the individual meta-pkgs
-[ubuntu-desktop]
-KeyDependencies=gdm, gnome-panel, ubuntu-artwork
-# those pkgs will be marked remove right after the distUpgrade in the cache
-PostUpgradeRemove=xchat, xscreensaver
-
-[kubuntu-desktop]
-KeyDependencies=kdm, kicker, kubuntu-artwork-usplash
-# those packages are marked as obsolete right after the upgrade
-ForcedObsoletes=ivman
-
-[edubuntu-desktop]
-KeyDependencies=edubuntu-artwork, tuxpaint
-
-[xubuntu-desktop]
-KeyDependencies=xubuntu-artwork-usplash, xubuntu-default-settings, xfce4
-
-
-[Files]
-BackupExt=distUpgrade
-
 [Sources]
-From=gutsy
-To=hardy
+From=natty
+To=oneiric
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
+Components=main,restricted,universe,multiverse
 
-[Network]
-MaxRetries=3
+[Distro]
+BaseMetaPkgs=ubuntu-minimal,ubuntu-standard
+AllowUnauthenticated=yes
+
+[DEFAULT]
+AutoUpgradeTesterBaseDir=/var/cache
 
 [NonInteractive]
-ProfileName=edubuntu
+ProfileName = edubuntu
 BasePkg = edubuntu-desktop
 ;AdditionalPkgs = additional_pkgs.cfg
 Mirror = http://archive.ubuntu.com/ubuntu
-Proxy=http://192.168.1.1:3128/
+;Mirror = http://us.ec2.archive.ubuntu.com/ubuntu
+;Proxy=http://192.168.1.1:3128/
 ForceOverwrite=no
-CacheTarball=yes
-Components=main,restricted
+Components=main,restricted,universe,multiverse
 Pockets=security,updates
-SSHKey=ssh-key
-BaseImage=jeos/gutsy-i386.qcow2
-CacheBaseImage=yes
-SwapImage=jeos/swap.qcow2
 UpgradeFromDistOnBootstrap=true
 WorkaroundNetworkManager=true
+;RealReboot=yes
+;AddRepo=mvo-ppa.list
+ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
+;ResultDir=./result
+SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
+DebugBrokenScripts=yes
 DpkgProgressLog=yes
 
+[KVM]
+;VncNum=3
+;SshPort=54324
+ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
+BaseImage=%(ImageDir)s/natty-i386.qcow2
+CacheBaseImage=yes
+;SwapImage=jeos/swap.qcow2
+
+[EC2]
+;FIXME: use the official images (once they are available)
+AMI=ami-0d729464
+SSHKey=./ec2-keypair.pem
+
+[CHROOT]
+Tempdir=%(AutoUpgradeTesterBaseDir)s/auto-upgrader-tester/chroot
+CacheTarball=yes
