--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -23,7 +23,7 @@ ForcedObsoletes=ksplash-engine-moodin, powernowd, laptop-mode-tools
 # hints for for stuff that should be done early
 PostUpgradePurge=ltsp-client, ltspfsd, linux-restricted-modules-common
 PostUpgradeRemove=libflashsupport, kvm-source, gtk-qt-engine, libparted1.8-12, usplash, printconf, foomatic-db-gutenprint, ebox-printers, kbluetooth, kde-plasmoid-cwp
-PostUpgradeUpgrade=brasero
+PostUpgradeUpgrade=brasero,edubuntu-desktop
 #PostUpgradeInstall=apt
 PostInstallScripts=./xorg_fix_proprietary.py
 EnableApport=yes
