* DistUpgrade/DistUpgradeController.py:   - add precise as a LTS release * AutoUpgradeTester/profile/*/DistUpgrade.cfg:   - updated to test oneiric->precise and lucid->precise

--- a/AutoUpgradeTester/profile/edubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/edubuntu/DistUpgrade.cfg
@@ -2,8 +2,8 @@
 View=DistUpgradeViewNonInteractive
 
 [Sources]
-From=natty
-To=oneiric
+From=oneiric
+To=precise
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
