--- a/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/kubuntu/DistUpgrade.cfg
@@ -7,8 +7,8 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 AllowUnauthenticated=yes
 
 [Sources]
-From=natty
-To=oneiric
+From=oneiric
+To=precise
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
