--- a/AutoUpgradeTester/profile/lts-main-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-main-all/DistUpgrade.cfg
@@ -7,7 +7,7 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 
 [Sources]
 From=lucid
-To=maverick
+To=precise
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
