--- a/AutoUpgradeTester/profile/main-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/main-all/DistUpgrade.cfg
@@ -6,8 +6,8 @@ View=DistUpgradeViewNonInteractive
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 
 [Sources]
-From=natty
-To=oneiric
+From=oneiric
+To=precise
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
