--- a/AutoUpgradeTester/profile/lts-server-tasks/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-server-tasks/DistUpgrade.cfg
@@ -8,7 +8,7 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 
 [Sources]
 From=lucid
-To=maverick
+To=precise
 
 [DEFAULT]
 AutoUpgradeTesterBaseDir=/var/cache
