--- a/AutoUpgradeTester/profile/server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server/DistUpgrade.cfg
@@ -11,8 +11,8 @@ BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 ;EnableChrootRsync=yes
 
 [Sources]
-From=natty
-To=oneiric
+From=oneiric
+To=precise
 
 [DEFAULT]
 AutoUpgradeTesterBaseDir=/var/cache
