--- a/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/ubuntu/DistUpgrade.cfg
@@ -2,8 +2,8 @@
 View=DistUpgradeViewNonInteractive
 
 [Sources]
-From=natty
-To=oneiric
+From=oneiric
+To=precise
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
