--- a/AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/xubuntu/DistUpgrade.cfg
@@ -3,8 +3,8 @@
 View=DistUpgradeViewNonInteractive
 
 [Sources]
-From=natty
-To=oneiric
+From=oneiric
+To=precise
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
