simplify the auto-upgrade-tester config considerable for the lts->lts tests, add selection of architectures

--- a/AutoUpgradeTester/profile/lts-server/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-server/DistUpgrade.cfg
@@ -7,11 +7,8 @@ AllowUnauthenticated=yes
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 
 [Sources]
-From=lucid
-To=precise
-
-[DEFAULT]
-AutoUpgradeTesterBaseDir=/var/cache
+From=%(SourceRelease)s
+To=%(TargetRelease)s
 
 [NonInteractive]
 ProfileName = lts-server
@@ -39,7 +36,7 @@ VncNum=1
 SshPort=54322
 ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 CacheImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
-BaseImage=%(ImageDir)s/lucid-i386.qcow2
+BaseImage=%(ImageDir)s/%(TargetRelease)s-i386.qcow2
 CacheBaseImage=yes
 
 [CHROOT]
