--- a/AutoUpgradeTester/profile/server-amd64/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/server-amd64/DistUpgrade.cfg
@@ -1,7 +1,9 @@
 [NonInteractive]
-ProfileName=server
+ProfileName=server-amd64
 AdditionalPkgs = pkgs.cfg
 
 [KVM]
 VncNum=1
 SshPort=54322
+Arch=amd64
+
