more cleanup, fix defaults.cfg baseimage, remove some old and unsued profiles, add missing DistUpgrade.cfg.lucid to the main upgrader

--- a/AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg
+++ b/AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg
@@ -27,15 +27,16 @@ DpkgProgressLog=no
 ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
 SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 DebugBrokenScripts=yes
+UseUpgraderFromBzr=false
 ;AddRepo=local_testing.list
-;UseUpgraderFromBzr=false
+
 
 [KVM]
 Virtio=True
 Arch=i386
 ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 CacheImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
-BaseImage=%(ImageDir)s/%(TargetRelease)s-%(Arch)s.qcow2
+BaseImage=%(ImageDir)s/%(SourceRelease)s-%(Arch)s.qcow2
 CacheBaseImage=yes
 
 [EC2]
