* AutoUpgradeTester/UpgradeTestBackendQemu.py:   - dynamically allocate ssh/vnc ports when multiple testers are run

--- a/AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg
+++ b/AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg
@@ -38,6 +38,8 @@ ImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 CacheImageDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/
 BaseImage=%(ImageDir)s/%(SourceRelease)s-%(Arch)s.qcow2
 CacheBaseImage=yes
+VncNum=1
+SshPort=54322
 
 [EC2]
 ; Ubuntu official images:
