Extract strings for translation from u-m-t and u-s-s executables

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -34,8 +34,10 @@ UpdateManager/Core/utils.py
 data/update-manager.desktop.in
 data/com.ubuntu.update-manager.gschema.xml.in
 update-manager
+update-manager-text
 do-release-upgrade
 check-new-release-gtk
+ubuntu-support-status
 Janitor/computerjanitor/cruft.py
 Janitor/computerjanitor/cruft_tests.py
 Janitor/computerjanitor/exc.py
