* AutoUpgradeTester/profile: Added grub-pc to the list of additional packages   to replace grub in the bootstrapped image. Precise's kernel panics on boot   after an upgrade from Lucid.

--- a/AutoUpgradeTester/profile/lts-main-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-main-all/DistUpgrade.cfg
@@ -3,5 +3,6 @@ SourceRelease=lucid
 
 [NonInteractive]
 ProfileName = lts-main-all
+AdditionalPkgs = pkgs.cfg
 PostBootstrapScript=/usr/share/pyshared/AutoUpgradeTester/install_all.py
 
