--- a/AutoUpgradeTester/profile/lts-ubuntu-amd64/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-ubuntu-amd64/DistUpgrade.cfg
@@ -4,6 +4,7 @@ SourceRelease=lucid
 [NonInteractive]
 ProfileName=lts-ubuntu-amd64
 BasePkg = ubuntu-desktop
+AdditionalPkgs = pkgs.cfg
 
 [KVM]
 Arch=amd64
