--- a/AutoUpgradeTester/profile/lts-ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-ubuntu/DistUpgrade.cfg
@@ -4,4 +4,5 @@ SourceRelease=lucid
 [NonInteractive]
 ProfileName=lts-ubuntu
 BasePkg = ubuntu-desktop
+AdditionalPkgs = pkgs.cfg
 ;UseUpgraderFromBzr=true
