--- a/AutoUpgradeTester/profile/main-all-amd64/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/main-all-amd64/DistUpgrade.cfg
@@ -1,5 +1,6 @@
 [NonInteractive]
 ProfileName = main-all-amd64
+AdditionalPkgs = pkgs.cfg
 PostBootstrapScript=/usr/share/pyshared/AutoUpgradeTester/install_all.py
 
 [KVM]
