--- a/AutoUpgradeTester/profile/python-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/python-all/DistUpgrade.cfg
@@ -1,5 +1,6 @@
 [NonInteractive]
 ProfileName=python-all
 BasePkg = ubuntu-standard
+AdditionalPkgs = pkgs.cfg
 PostBootstrapScript=/usr/share/pyshared/AutoUpgradeTester/install_all-python.py
 
