* Added lts-main-all-amd64: All of main on amd64 * casper and ubiquity added to package blacklist * Increase VM memory to 1.5GB * Add grub-pc to the list of additional packages for lts-main-all and lts-ubuntu

--- a/AutoUpgradeTester/profile/lts-main-all-amd64/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-main-all-amd64/DistUpgrade.cfg
@@ -1,8 +1,12 @@
+[DEFAULT]
+SourceRelease=lucid
+
 [NonInteractive]
-ProfileName = main-all-amd64
+ProfileName = lts-main-all-amd64
 AdditionalPkgs = pkgs.cfg
 PostBootstrapScript=/usr/share/pyshared/AutoUpgradeTester/install_all.py
 ;PostBootstrapScript=/home/upgrade-tester/update-manager/AutoUpgradeTester/install_all.py
 
 [KVM]
 Arch=amd64
+
