--- a/AutoUpgradeTester/profile/lts-main-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-main-all/DistUpgrade.cfg
@@ -5,4 +5,4 @@ SourceRelease=lucid
 ProfileName = lts-main-all
 AdditionalPkgs = pkgs.cfg
 PostBootstrapScript=/usr/share/pyshared/AutoUpgradeTester/install_all.py
-
+;PostBootstrapScript=/home/upgrade-tester/update-manager/AutoUpgradeTester/install_all.py
