--- a/AutoUpgradeTester/profile/lts-main-all/install_blacklist.cfg
+++ b/AutoUpgradeTester/profile/lts-main-all/install_blacklist.cfg
@@ -26,3 +26,21 @@ tdsodbc
 # Only useful on livecd
 casper
 ubiquity
+
+# No need for so many kernels
+linux-image-.*
+
+# Failed to install
+bacula-director-mysql
+dovecot-common
+rabbitmq-server
+
+# cloud/ec2 no fun
+cloud-init
+ec2-init
+linux-image-ec2
+linux-image-2.6.31-302-ec2
+
+# not installable on a regular machine
+ltsp-client
+ltsp-client-core
