--- a/AutoUpgradeTester/profile/main-all/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/main-all/DistUpgrade.cfg
@@ -2,3 +2,4 @@
 ProfileName = main-all
 AdditionalPkgs = pkgs.cfg
 PostBootstrapScript=/usr/share/pyshared/AutoUpgradeTester/install_all.py
+;PostBootstrapScript=/home/upgrade-tester/update-manager/AutoUpgradeTester/install_all.py
