* Added RootSize configuration setting and set default to 80000kB

--- a/AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg
+++ b/AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg
@@ -40,6 +40,8 @@ BaseImage=%(ImageDir)s/%(SourceRelease)s-%(Arch)s.qcow2
 CacheBaseImage=yes
 VncNum=1
 SshPort=54322
+VirtualRam=1536
+RootSize=80000
 
 [EC2]
 ; Ubuntu official images:
