* Catch debconf prompts and added associated post upgrade test * Fixed classname in Junit XML result file to refer to the test name instead   of an unamed class. It makes results prettier in jenkins * DistUpgradeViewNonInteractive.py: Only set frontend if it is not already set   in the environment

--- a/AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg
+++ b/AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg
@@ -29,6 +29,7 @@ SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 DebugBrokenScripts=yes
 UseUpgraderFromBzr=false
 ;AddRepo=local_testing.list
+DebconfLog=/var/log/dist-upgrade/debconf.log
 
 
 [KVM]
