* Added postbootstrap and test scripts for desktop system and user tests.   Thanks to Martin Pitt for the original scripts! * Added duration of the run

--- a/AutoUpgradeTester/profile/lts-ubuntu-amd64/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-ubuntu-amd64/DistUpgrade.cfg
@@ -5,6 +5,8 @@ SourceRelease=lucid
 ProfileName=lts-ubuntu-amd64
 BasePkg = ubuntu-desktop
 AdditionalPkgs = pkgs.cfg
+PostBootstrapData = /usr/share/pyshared/AutoUpgradeTester/prepare_lts_user
+PostBootstrapScript = /usr/share/pyshared/AutoUpgradeTester/prepare_lts_desktop
 
 [KVM]
 Arch=amd64
