--- a/AutoUpgradeTester/profile/lts-ubuntu/DistUpgrade.cfg
+++ b/AutoUpgradeTester/profile/lts-ubuntu/DistUpgrade.cfg
@@ -5,4 +5,6 @@ SourceRelease=lucid
 ProfileName=lts-ubuntu
 BasePkg = ubuntu-desktop
 AdditionalPkgs = pkgs.cfg
+PostBootstrapData = /usr/share/pyshared/AutoUpgradeTester/prepare_lts_user
+PostBootstrapScript = /usr/share/pyshared/AutoUpgradeTester/prepare_lts_desktop
 ;UseUpgraderFromBzr=true
