* DistUpgrade/DistUpgradeController.py, DistUpgrade/mirrors.cfg:   - support upgrades with commercial-ppas in the sources.list     (LP: #939461) and add tests

--- a/DistUpgrade/mirrors.cfg
+++ b/DistUpgrade/mirrors.cfg
@@ -14,9 +14,13 @@ ftp://old-releases.ubuntu.com/
 http://extras.ubuntu.com/ubuntu
 ftp://extras.ubuntu.com/ubuntu
 
-#commercial (both urls are valid
+#commercial (both urls are valid)
 http://archive.canonical.com
 http://archive.canonical.com/ubuntu/
+
+#commercial-ppas
+https://private-ppa.launchpad.net/commercial-ppa-uploaders
+
 
 ##===Australia===
 http://ftp.iinet.net.au/pub/ubuntu/
