* DistUpgrade/DistUpgrade.cfg, DistUpgrade/removal_blacklist.cfg,   UpdateManager/Core/utils.py,   AutoUpgradeTester/profile/lubuntu/DistUpgrade.cfg:  - Add Lubuntu support, and don't upgrade gnome-compoents which have been    removed from Lubuntu installation (LP: #945215)

--- a/DistUpgrade/DistUpgrade.cfg
+++ b/DistUpgrade/DistUpgrade.cfg
@@ -10,7 +10,7 @@ SupportSSH=DistUpgradeViewText,DistUpgradeViewNonInteractive
 # Distro contains global information about the upgrade
 [Distro]
 # the meta-pkgs we support
-MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-desktop, ubuntustudio-desktop, ichthux-desktop, mythbuntu-desktop, ubuntu-netbook, kubuntu-netbook
+MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-desktop, ubuntustudio-desktop, ichthux-desktop, mythbuntu-desktop, ubuntu-netbook, kubuntu-netbook, lubuntu-desktop
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 Demotions=demoted.cfg
 RemoveEssentialOk=sysvinit, sysvutils, belocs-locales-bin
@@ -70,6 +70,11 @@ KeyDependencies=ichthux-artwork, ichthux-default-settings
 
 [mythbuntu-desktop]
 KeyDependencies=mythbuntu-artwork, mythbuntu-default-settings
+
+[lubuntu-desktop]
+KeyDependencies=lubuntu-desktop, lubuntu-default-settings
+#Remove previous gnome component from lubuntu to avoid pulling gnome depends on upgrade (LP: #945215)
+PostUpgradeRemove=gnome-bluetooth, gnome-power-manager
 
 [Files]
 BackupExt=distUpgrade
