--- a/DistUpgrade/removal_blacklist.cfg
+++ b/DistUpgrade/removal_blacklist.cfg
@@ -4,6 +4,7 @@ ubuntu-minimal
 ubuntu-desktop
 kubuntu-desktop
 xubuntu-desktop
+lubuntu-desktop
 # update-manager itself should not remove itself
 update-manager
 update-manager-core
