Update icon name to use FD.o standard (LP: #921310)

--- a/data/update-manager.desktop.in
+++ b/data/update-manager.desktop.in
@@ -3,7 +3,7 @@ _Name=Update Manager
 _GenericName=Software Updates
 _Comment=Show and install available updates
 Exec=/usr/bin/update-manager
-Icon=update-manager
+Icon=system-software-update
 Terminal=false
 Type=Application
 Categories=System;Settings;
