* debian/control:   - fix description for update-manager-kde (LP: #984906),     thanks to Scott Kitterman

--- a/debian/control
+++ b/debian/control
@@ -67,8 +67,8 @@ Depends: ${python:Depends},
          update-manager-core, 
          python-kde4, 
          kdesudo
-Description: Support modules for KPackageKit
- Support modules for KPackageKit to check for new distro releases 
+Description: Support modules for Muon Notifier and Apper
+ Support modules for Muon Notifier and Apper to check for new distro releases 
  and download the dist-upgrade tool.
 
 Package: auto-upgrade-tester
