update several strings to match the software updater spec; most notably, rename from Update Manager to Software Updater

--- a/data/update-manager.desktop.in
+++ b/data/update-manager.desktop.in
@@ -1,5 +1,5 @@
 [Desktop Entry]
-_Name=Update Manager
+_Name=Software Updater
 _GenericName=Software Updates
 _Comment=Show and install available updates
 Exec=/usr/bin/update-manager
