switch from pane view to second expander and also save state of toplevel expander

--- a/data/com.ubuntu.update-manager.gschema.xml.in
+++ b/data/com.ubuntu.update-manager.gschema.xml.in
@@ -5,6 +5,11 @@
       <summary>Remind to reload the channel list</summary>
       <description>If automatic checking for updates is disabled, you have to reload the channel list manually. This option allows to hide the reminder shown in this case.</description>
     </key>
+    <key name="show-details" type="b">
+      <default>false</default>
+      <summary>Show details of an update</summary>
+      <description>Stores the state of the expander that contains the list of changes and the description</description>
+    </key>
     <key name="window-width" type="i">
       <default>0</default>
       <summary>The window width</summary>
