AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg: update from precise to quantal

--- a/AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg
+++ b/AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg
@@ -3,8 +3,8 @@
 #
 [DEFAULT]
 AutoUpgradeTesterBaseDir=/var/cache
-SourceRelease=oneiric
-TargetRelease=precise
+SourceRelease=precise
+TargetRelease=quantal
 
 [Distro]
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
@@ -27,7 +27,7 @@ DpkgProgressLog=no
 ResultDir=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/result
 SSHKey=%(AutoUpgradeTesterBaseDir)s/auto-upgrade-tester/ssh-key
 DebugBrokenScripts=yes
-UseUpgraderFromBzr=false
+UseUpgraderFromBzr=true
 ;AddRepo=local_testing.list
 DebconfLog=/var/log/dist-upgrade/debconf.log
 
