/usr/share/nvidia-common/obsolete was renamed to /usr/share/ubuntu-drivers-common/obsolete and moved packages.  Cope with this.

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                python-distutils-extra (>= 1.90), 
                python-apt (>= 0.7.5),
                lsb-release,
-               nvidia-common (>= 0.2.11) [i386 amd64], 
+               ubuntu-drivers-common [i386 amd64], 
                apt-clone
 Build-Depends-Indep: libxml-parser-perl, 
                      scrollkeeper, 
